tests/cases/errors/compile_unclosed_paren.lox
// expect compile error: Expect ')' after expression.
(1 + 2
